--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT="3000"
-DSN="root:123Aa@tcp(127.0.0.1:3306)/ginblog?charset=utf8mb4&parseTime=True&loc=Local"
+DSN="root:123Aa@@tcp(127.0.0.1:3306)/ginblog?charset=utf8mb4&parseTime=True&loc=Local"
+PASSWORDEMAIL="rvos wikt twmb xwjy"
+FROMEMAIL="quocphan20111999@gmail.com"
+SMTP="smtp.gmail.com"
+PORTSMTP="587"
